--- a/main.html
+++ b/main.html
@@ -7,22 +7,25 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<nav class="navbar">
-        <div class="navbar-logo-container">Hamburger Navigation</div>
-        <div class="navbar-links-container">
-            <ul class="navbar-links-list">
-                <li class="navbar-link"><a href="#">Home</a></li>
-                <li class="navbar-link"><a href="#">Blog</a></li>
-                <li class="navbar-link"><a href="#">About me</a></li>
-            </ul>
-            <button class="menu-toggle-button open-menu">
-                <div class="menu-bar top"></div>
-                <div class="menu-bar mid"></div>
-                <div class="menu-bar bottom"></div>
-            </button>
-        </div>
+	<header>
+    <div class="logo">Logo</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+
+		  <li class="nav-sub">Submenu</li>
+      </ul>
     </nav>
+    <div class="ham">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+  </header>
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
